<!--
  ~ Copyright (c) 2017. Ruslan Primak
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ Last modified 4/23/17 11:40 PM
  -->

<resources>
    <string name="app_name">Realm Adapter Expandable List</string>
    <string name="no_data">No Data</string>
    <string name="add_group_button">Add G</string>
    <string name="delete_button">Del</string>
    <string name="edit_button">Edit</string>
    <string name="add_child_button">Add SG</string>
    <string name="select_group_button">Sel G</string>
    <string name="select_child_button">Sel SG</string>
</resources>
