<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017. Ruslan Primak
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ Last modified 4/23/17 11:40 PM
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/addGroupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_group_button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:onClick="onAddGroupButtonClick" />

        <Button
            android:id="@+id/addSubGroupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_child_button"
            app:layout_constraintLeft_toRightOf="@+id/addGroupButton"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:onClick="onAddSubgroupButtonClick"/>

        <Button
            android:id="@+id/delButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"
            android:onClick="onDelButtonClick"
            app:layout_constraintLeft_toRightOf="@+id/addSubGroupButton"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintLeft_toRightOf="@+id/delButton"
            android:layout_marginLeft="8dp"
            android:onClick="onEditButtonClick" />

        <Button
            android:id="@+id/selGroupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_group_button"
            app:layout_constraintLeft_toRightOf="@+id/editButton"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:onClick="onSelectGroupButtonClick"/>

        <Button
            android:id="@+id/selChildButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_child_button"
            app:layout_constraintLeft_toRightOf="@+id/selGroupButton"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:onClick="onSelectChildButtonClick"/>

        <FrameLayout
            android:id="@+id/listHolder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/addGroupButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <ExpandableListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:choiceMode="singleChoice"
                tools:listitem="@layout/exp_list_item" />

            <TextView
                android:id="@+id/emptyView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_data"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:visibility="gone" />

        </FrameLayout>

    </android.support.constraint.ConstraintLayout>
</layout>